# conversation_transcriber

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_batch.md  batch_downscale_480p.py  batch_transcribe.py  conversation_transcriber.py  env.example  pyproject.toml  rename_screen_recording_based_on_content_gpu_ONLY_en.py  requirements.txt  transcribe_and_summarize_recording_en_and_zh.py  transcribe_and_summarize_recording_zhOnly_assign.speaker_optionaly.rename.py  transcribe_and_summarize_recording_zhOnly_batch.py
conversation_transcriber/: __init__.py  batch_transcribe.py  conversation_transcriber.py
toremove_later/: rename_screen_recording_based_on_content_en_and_zh.py  transcribe_and_summarize_recording_zhOnly.py
