[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conversation-transcriber"
version = "0.1.0"
description = "AI-powered conversation transcription with speaker separation and intelligent summarization"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "shaopei"},
]
maintainers = [
    {name = "shaopei"},
]
keywords = ["transcription", "speech-recognition", "speaker-diarization", "ai", "conversation", "summary"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "pyannote.audio>=3.0.0",
    "pydub>=0.25.0",
    "torch>=1.9.0",
    "pywhispercpp>=1.0.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
]

[project.urls]
Homepage = "https://github.com/yourusername/conversation-transcriber"
Documentation = "https://github.com/yourusername/conversation-transcriber#readme"
Repository = "https://github.com/yourusername/conversation-transcriber"
"Bug Tracker" = "https://github.com/yourusername/conversation-transcriber/issues"

[project.scripts]
conversation-transcriber = "conversation_transcriber.conversation_transcriber:main"
batch-transcribe = "conversation_transcriber.batch_transcribe:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["conversation_transcriber*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"] 